version 1.4.4 * wordpress screenoptions bugfix * z-index for colorbox increased
git-svn-id: https://plugins.svn.wordpress.org/1000grad-epaper/trunk@788188 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/tg_styles.css
+++ b/css/tg_styles.css
@@ -531,7 +531,7 @@ div#tg_epaper_progress_bar a.tg_cancel_upload{
     white-space: nowrap;
 }
 
-.hidden{
+.tg_epaper_hidden{
     visibility: hidden;
 }
 
